Update generate_pages.py to work on scripts.
generate_pages.py got updated to handle javascript to create individual script files for the different languages.

--- a/_templates/source_files/flower_delivery.html
+++ b/_templates/source_files/flower_delivery.html
@@ -4,15 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>!!!PRODUCTS_TITLE!!!</title>
+    <title>!!!FLOWER_DELIVERY_TITLE!!!</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <noscript>
         <style>
             .dropDown,
             header .textLogo,
-            .sortingOptions,
-            .productsPage {
+            .servicesPage {
                 display: none;
             }
 
@@ -27,14 +26,24 @@
     !!!HEADER!!!
     <main>
         <div class="centerInfo textSmall fontInter">
-            <div class="sortingOptions">
-                <label class="vatButton textExtraSmall">
-                    !!!SHOW_PRICE_WITHOUT_VAT!!!
-                    <input type="checkbox" class="vatCheckbox" id="toggleVAT">
-                </label>
-            </div>
-            <div class="productsPage">
-
+            <div class="servicesPage">
+                <div class="service">
+                    <div class="serviceName textMedium fontProza fontBold">
+                        !!!FLOWER_DELIVERY!!!
+                    </div>
+                    <img src="images/flower_delivery.jpg" alt="">
+                    <div class="sendFlowersText textMediumSmall fontProza">
+                        !!!SEND_FLOWERS!!!
+                    </div>
+                    <input type="text" class="postalCodeInput textSmall fontInter"
+                        placeholder="!!!POSTAL_CODE!!!: XXX XX">
+                    <div class="postalCodeOutput textSmall fontInter">
+                    </div>
+                    <input type="button" class="confirmButton textSmall fontInter" value="!!!CHECK_POSTAL_CODE!!!">
+                    <div class="serviceDescription textSmall fontInter">
+                        !!!FLOWER_DELIVERY_DESCRIPTION!!!
+                    </div>
+                </div>
             </div>
             <noscript>
                 <div class="noscriptContainer">
@@ -53,12 +62,7 @@
         </div>
         !!!FOOTER!!!
     </main>
-    <script src="toggle_vat.js"></script>
-    <script type="module">
-        import { createProducts } from "./supabase/products.js";
-        createProducts("!!!LANGUAGE!!!");
-        toggleVAT();
-    </script>
+    <script type="module" src="flower_delivery!!!LANGUAGE_ID!!!.js"></script>
     !!!GLOBAL_JS!!!
 </body>
 
