--- a/website/about_us_danish.html
+++ b/website/about_us_danish.html
@@ -46,15 +46,18 @@
         </label>
         <div class="dropDownMenu">
             <a href="products_danish.html" class="products textMediumSmall textLight fontInter">Produkter</a>
-            <a href="consultation_danish.html" class="products textMediumSmall textLight fontInter">Konsultation</a>
-            <a href="flower_delivery_danish.html" class="products textMediumSmall textLight fontInter">Send blomster</a>
+            <a href="consultation_danish.html"
+                class="products textMediumSmall textLight fontInter">Konsultation</a>
+            <a href="flower_delivery_danish.html"
+                class="products textMediumSmall textLight fontInter">Send blomster</a>
         </div>
     </div>
 
     <div class="allServices">
         <a href="products_danish.html" class="products textMedium textDark fontProza fontBold">Produkter</a>
         <a href="consultation_danish.html" class="products textMedium textDark fontProza fontBold">Konsultation</a>
-        <a href="flower_delivery_danish.html" class="products textMedium textDark fontProza fontBold">Send blomster</a>
+        <a href="flower_delivery_danish.html"
+            class="products textMedium textDark fontProza fontBold">Send blomster</a>
     </div>
 </header>
     <main>
