--- a/website/index_english.html
+++ b/website/index_english.html
@@ -52,15 +52,18 @@
         </label>
         <div class="dropDownMenu">
             <a href="products_english.html" class="products textMediumSmall textLight fontInter">Products</a>
-            <a href="consultation_english.html" class="products textMediumSmall textLight fontInter">Consultation</a>
-            <a href="flower_delivery_english.html" class="products textMediumSmall textLight fontInter">Send Flowers</a>
+            <a href="consultation_english.html"
+                class="products textMediumSmall textLight fontInter">Consultation</a>
+            <a href="flower_delivery_english.html"
+                class="products textMediumSmall textLight fontInter">Send Flowers</a>
         </div>
     </div>
 
     <div class="allServices">
         <a href="products_english.html" class="products textMedium textDark fontProza fontBold">Products</a>
         <a href="consultation_english.html" class="products textMedium textDark fontProza fontBold">Consultation</a>
-        <a href="flower_delivery_english.html" class="products textMedium textDark fontProza fontBold">Send Flowers</a>
+        <a href="flower_delivery_english.html"
+            class="products textMedium textDark fontProza fontBold">Send Flowers</a>
     </div>
 </header>
     <main>
