--- a/website/products_english.html
+++ b/website/products_english.html
@@ -47,15 +47,18 @@
         </label>
         <div class="dropDownMenu">
             <a href="products_english.html" class="products textMediumSmall textLight fontInter">Products</a>
-            <a href="consultation_english.html" class="products textMediumSmall textLight fontInter">Consultation</a>
-            <a href="flower_delivery_english.html" class="products textMediumSmall textLight fontInter">Send Flowers</a>
+            <a href="consultation_english.html"
+                class="products textMediumSmall textLight fontInter">Consultation</a>
+            <a href="flower_delivery_english.html"
+                class="products textMediumSmall textLight fontInter">Send Flowers</a>
         </div>
     </div>
 
     <div class="allServices">
         <a href="products_english.html" class="products textMedium textDark fontProza fontBold">Products</a>
         <a href="consultation_english.html" class="products textMedium textDark fontProza fontBold">Consultation</a>
-        <a href="flower_delivery_english.html" class="products textMedium textDark fontProza fontBold">Send Flowers</a>
+        <a href="flower_delivery_english.html"
+            class="products textMedium textDark fontProza fontBold">Send Flowers</a>
     </div>
 </header>
     <main>
@@ -181,8 +184,8 @@
     </main>
     <script src="toggle_vat.js"></script>
     <script type="module">
-        import { createProducts } from "./supabase/products.js";
-        createProducts("en");
+        import { createProducts } from "./products_english.js";
+        createProducts();
         toggleVAT();
     </script>
     <script src="drop_down_button.js"></script>
