--- a/_templates/modules/header.html
+++ b/_templates/modules/header.html
@@ -21,14 +21,17 @@
         </label>
         <div class="dropDownMenu">
             <a href="!!!PRODUCTS_LINK!!!" class="products textMediumSmall textLight fontInter">!!!PRODUCTS!!!</a>
-            <a href="!!!CONSULTATION_LINK!!!" class="products textMediumSmall textLight fontInter">!!!CONSULTATION!!!</a>
-            <a href="!!!FLOWER_DELIVERY_LINK!!!" class="products textMediumSmall textLight fontInter">!!!FLOWER_DELIVERY!!!</a>
+            <a href="!!!CONSULTATION_LINK!!!"
+                class="products textMediumSmall textLight fontInter">!!!CONSULTATION!!!</a>
+            <a href="!!!FLOWER_DELIVERY_LINK!!!"
+                class="products textMediumSmall textLight fontInter">!!!FLOWER_DELIVERY!!!</a>
         </div>
     </div>
 
     <div class="allServices">
         <a href="!!!PRODUCTS_LINK!!!" class="products textMedium textDark fontProza fontBold">!!!PRODUCTS!!!</a>
         <a href="!!!CONSULTATION_LINK!!!" class="products textMedium textDark fontProza fontBold">!!!CONSULTATION!!!</a>
-        <a href="!!!FLOWER_DELIVERY_LINK!!!" class="products textMedium textDark fontProza fontBold">!!!FLOWER_DELIVERY!!!</a>
+        <a href="!!!FLOWER_DELIVERY_LINK!!!"
+            class="products textMedium textDark fontProza fontBold">!!!FLOWER_DELIVERY!!!</a>
     </div>
 </header>
