--- a/website/flower_delivery.html
+++ b/website/flower_delivery.html
@@ -46,15 +46,18 @@
         </label>
         <div class="dropDownMenu">
             <a href="products.html" class="products textMediumSmall textLight fontInter">Produkter</a>
-            <a href="consultation.html" class="products textMediumSmall textLight fontInter">Konsultation</a>
-            <a href="flower_delivery.html" class="products textMediumSmall textLight fontInter">Blommogram</a>
+            <a href="consultation.html"
+                class="products textMediumSmall textLight fontInter">Konsultation</a>
+            <a href="flower_delivery.html"
+                class="products textMediumSmall textLight fontInter">Blommogram</a>
         </div>
     </div>
 
     <div class="allServices">
         <a href="products.html" class="products textMedium textDark fontProza fontBold">Produkter</a>
         <a href="consultation.html" class="products textMedium textDark fontProza fontBold">Konsultation</a>
-        <a href="flower_delivery.html" class="products textMedium textDark fontProza fontBold">Blommogram</a>
+        <a href="flower_delivery.html"
+            class="products textMedium textDark fontProza fontBold">Blommogram</a>
     </div>
 </header>
     <main>
@@ -188,7 +191,7 @@
     </div>
 </footer>
     </main>
-    <script type="module" src="./supabase/flower_delivery.js"></script>
+    <script type="module" src="flower_delivery.js"></script>
     <script src="drop_down_button.js"></script>
 <script src="config.js"></script>
 </body>
