--- a/website/flower_delivery_english.html
+++ b/website/flower_delivery_english.html
@@ -46,15 +46,18 @@
         </label>
         <div class="dropDownMenu">
             <a href="products_english.html" class="products textMediumSmall textLight fontInter">Products</a>
-            <a href="consultation_english.html" class="products textMediumSmall textLight fontInter">Consultation</a>
-            <a href="flower_delivery_english.html" class="products textMediumSmall textLight fontInter">Send Flowers</a>
+            <a href="consultation_english.html"
+                class="products textMediumSmall textLight fontInter">Consultation</a>
+            <a href="flower_delivery_english.html"
+                class="products textMediumSmall textLight fontInter">Send Flowers</a>
         </div>
     </div>
 
     <div class="allServices">
         <a href="products_english.html" class="products textMedium textDark fontProza fontBold">Products</a>
         <a href="consultation_english.html" class="products textMedium textDark fontProza fontBold">Consultation</a>
-        <a href="flower_delivery_english.html" class="products textMedium textDark fontProza fontBold">Send Flowers</a>
+        <a href="flower_delivery_english.html"
+            class="products textMedium textDark fontProza fontBold">Send Flowers</a>
     </div>
 </header>
     <main>
@@ -188,7 +191,7 @@
     </div>
 </footer>
     </main>
-    <script type="module" src="./supabase/flower_delivery.js"></script>
+    <script type="module" src="flower_delivery_english.js"></script>
     <script src="drop_down_button.js"></script>
 <script src="config.js"></script>
 </body>
