--- a/website/index.html
+++ b/website/index.html
@@ -52,15 +52,18 @@
         </label>
         <div class="dropDownMenu">
             <a href="products.html" class="products textMediumSmall textLight fontInter">Produkter</a>
-            <a href="consultation.html" class="products textMediumSmall textLight fontInter">Konsultation</a>
-            <a href="flower_delivery.html" class="products textMediumSmall textLight fontInter">Blommogram</a>
+            <a href="consultation.html"
+                class="products textMediumSmall textLight fontInter">Konsultation</a>
+            <a href="flower_delivery.html"
+                class="products textMediumSmall textLight fontInter">Blommogram</a>
         </div>
     </div>
 
     <div class="allServices">
         <a href="products.html" class="products textMedium textDark fontProza fontBold">Produkter</a>
         <a href="consultation.html" class="products textMedium textDark fontProza fontBold">Konsultation</a>
-        <a href="flower_delivery.html" class="products textMedium textDark fontProza fontBold">Blommogram</a>
+        <a href="flower_delivery.html"
+            class="products textMedium textDark fontProza fontBold">Blommogram</a>
     </div>
 </header>
     <main>
