--- a/website/products_danish.html
+++ b/website/products_danish.html
@@ -47,15 +47,18 @@
         </label>
         <div class="dropDownMenu">
             <a href="products_danish.html" class="products textMediumSmall textLight fontInter">Produkter</a>
-            <a href="consultation_danish.html" class="products textMediumSmall textLight fontInter">Konsultation</a>
-            <a href="flower_delivery_danish.html" class="products textMediumSmall textLight fontInter">Send blomster</a>
+            <a href="consultation_danish.html"
+                class="products textMediumSmall textLight fontInter">Konsultation</a>
+            <a href="flower_delivery_danish.html"
+                class="products textMediumSmall textLight fontInter">Send blomster</a>
         </div>
     </div>
 
     <div class="allServices">
         <a href="products_danish.html" class="products textMedium textDark fontProza fontBold">Produkter</a>
         <a href="consultation_danish.html" class="products textMedium textDark fontProza fontBold">Konsultation</a>
-        <a href="flower_delivery_danish.html" class="products textMedium textDark fontProza fontBold">Send blomster</a>
+        <a href="flower_delivery_danish.html"
+            class="products textMedium textDark fontProza fontBold">Send blomster</a>
     </div>
 </header>
     <main>
@@ -181,8 +184,8 @@
     </main>
     <script src="toggle_vat.js"></script>
     <script type="module">
-        import { createProducts } from "./supabase/products.js";
-        createProducts("da");
+        import { createProducts } from "./products_danish.js";
+        createProducts();
         toggleVAT();
     </script>
     <script src="drop_down_button.js"></script>
