Update generate_pages.py to automatically create language drop-down
generate_pages.py was updated to create the items in the language selection drop-down automatically based on which files are in the languages folder.

--- a/_templates/modules/header.html
+++ b/_templates/modules/header.html
@@ -2,9 +2,7 @@
     <div class="languageSelection">
         <button onclick="flagDropDown()" class="flagDropDown" style="background-image: url(!!!FLAG_LINK!!!);"></button>
         <div class="flagDropDownMenu">
-            <a href="!!!LANGUAGE_LINK_SWEDISH!!!"><img src="./images/swedish_flag.jpg" alt="Swedish"></a>
-            <a href="!!!LANGUAGE_LINK_ENGLISH!!!"><img src="./images/british_flag.jpg" alt="English"></a>
-            <a href="!!!LANGUAGE_LINK_DANISH!!!"><img src="./images/danish_flag.jpg" alt="Danish"></a>
+            !!!LANGUAGE_ALTERNATIVES!!!
         </div>
     </div>
 
