--- a/website/flower_delivery.html
+++ b/website/flower_delivery.html
@@ -25,11 +25,12 @@
 <body>
     <header>
     <div class="languageSelection">
-        <button onclick="flagDropDown()" class="flagDropDown" style="background-image: url(./images/swedish_flag.jpg);"></button>
+        <button onclick="flagDropDown()" class="flagDropDown" style="background-image: url(./images/swedish.jpg);"></button>
         <div class="flagDropDownMenu">
-            <a href="flower_delivery.html"><img src="./images/swedish_flag.jpg" alt="Swedish"></a>
-            <a href="flower_delivery_english.html"><img src="./images/british_flag.jpg" alt="English"></a>
-            <a href="flower_delivery_danish.html"><img src="./images/danish_flag.jpg" alt="Danish"></a>
+            <a href='flower_delivery_danish.html'><img src='./images/danish.jpg' alt='danish'></a> 
+<a href='flower_delivery_english.html'><img src='./images/english.jpg' alt='english'></a> 
+<a href='flower_delivery.html'><img src='./images/swedish.jpg' alt='swedish'></a> 
+
         </div>
     </div>
 
