--- a/website/index_danish.html
+++ b/website/index_danish.html
@@ -31,11 +31,12 @@
 <body>
     <header>
     <div class="languageSelection">
-        <button onclick="flagDropDown()" class="flagDropDown" style="background-image: url(./images/danish_flag.jpg);"></button>
+        <button onclick="flagDropDown()" class="flagDropDown" style="background-image: url(./images/danish.jpg);"></button>
         <div class="flagDropDownMenu">
-            <a href="index.html"><img src="./images/swedish_flag.jpg" alt="Swedish"></a>
-            <a href="index_english.html"><img src="./images/british_flag.jpg" alt="English"></a>
-            <a href="index_danish.html"><img src="./images/danish_flag.jpg" alt="Danish"></a>
+            <a href='index_danish.html'><img src='./images/danish.jpg' alt='danish'></a> 
+<a href='index_english.html'><img src='./images/english.jpg' alt='english'></a> 
+<a href='index.html'><img src='./images/swedish.jpg' alt='swedish'></a> 
+
         </div>
     </div>
 
