Add instructions for adding a language
Instructions for adding a language to the site got added in how_to_add_a_language.md. The language files was simplified to have less values to change when adding a language.

--- a/_templates/modules/header.html
+++ b/_templates/modules/header.html
@@ -6,7 +6,7 @@
         </div>
     </div>
 
-    <a href="!!!INDEX_LINK!!!" class="title textLarge textLight fontLabrada">
+    <a href="index!!!LANGUAGE_ID!!!.html" class="title textLarge textLight fontLabrada">
         DELIKAT FLORA
     </a>
     <div class="logo textMediumLarge textLogo">
@@ -18,18 +18,21 @@
             <button onclick="onDropDownButtonClick()" class="dropButton"></button>
         </label>
         <div class="dropDownMenu">
-            <a href="!!!PRODUCTS_LINK!!!" class="products textMediumSmall textLight fontInter">!!!PRODUCTS!!!</a>
-            <a href="!!!CONSULTATION_LINK!!!"
+            <a href="products!!!LANGUAGE_ID!!!.html"
+                class="products textMediumSmall textLight fontInter">!!!PRODUCTS!!!</a>
+            <a href="consultation!!!LANGUAGE_ID!!!.html"
                 class="products textMediumSmall textLight fontInter">!!!CONSULTATION!!!</a>
-            <a href="!!!FLOWER_DELIVERY_LINK!!!"
+            <a href="flower_delivery!!!LANGUAGE_ID!!!.html"
                 class="products textMediumSmall textLight fontInter">!!!FLOWER_DELIVERY!!!</a>
         </div>
     </div>
 
     <div class="allServices">
-        <a href="!!!PRODUCTS_LINK!!!" class="products textMedium textDark fontProza fontBold">!!!PRODUCTS!!!</a>
-        <a href="!!!CONSULTATION_LINK!!!" class="products textMedium textDark fontProza fontBold">!!!CONSULTATION!!!</a>
-        <a href="!!!FLOWER_DELIVERY_LINK!!!"
+        <a href="products!!!LANGUAGE_ID!!!.html"
+            class="products textMedium textDark fontProza fontBold">!!!PRODUCTS!!!</a>
+        <a href="consultation!!!LANGUAGE_ID!!!.html"
+            class="products textMedium textDark fontProza fontBold">!!!CONSULTATION!!!</a>
+        <a href="flower_delivery!!!LANGUAGE_ID!!!.html"
             class="products textMedium textDark fontProza fontBold">!!!FLOWER_DELIVERY!!!</a>
     </div>
 </header>
