--- a/website/index.html
+++ b/website/index.html
@@ -52,7 +52,8 @@
             <button onclick="onDropDownButtonClick()" class="dropButton"></button>
         </label>
         <div class="dropDownMenu">
-            <a href="products.html" class="products textMediumSmall textLight fontInter">Produkter</a>
+            <a href="products.html"
+                class="products textMediumSmall textLight fontInter">Produkter</a>
             <a href="consultation.html"
                 class="products textMediumSmall textLight fontInter">Konsultation</a>
             <a href="flower_delivery.html"
@@ -61,8 +62,10 @@
     </div>
 
     <div class="allServices">
-        <a href="products.html" class="products textMedium textDark fontProza fontBold">Produkter</a>
-        <a href="consultation.html" class="products textMedium textDark fontProza fontBold">Konsultation</a>
+        <a href="products.html"
+            class="products textMedium textDark fontProza fontBold">Produkter</a>
+        <a href="consultation.html"
+            class="products textMedium textDark fontProza fontBold">Konsultation</a>
         <a href="flower_delivery.html"
             class="products textMedium textDark fontProza fontBold">Blommogram</a>
     </div>
