--- a/website/products_english.html
+++ b/website/products_english.html
@@ -47,7 +47,8 @@
             <button onclick="onDropDownButtonClick()" class="dropButton"></button>
         </label>
         <div class="dropDownMenu">
-            <a href="products_english.html" class="products textMediumSmall textLight fontInter">Products</a>
+            <a href="products_english.html"
+                class="products textMediumSmall textLight fontInter">Products</a>
             <a href="consultation_english.html"
                 class="products textMediumSmall textLight fontInter">Consultation</a>
             <a href="flower_delivery_english.html"
@@ -56,8 +57,10 @@
     </div>
 
     <div class="allServices">
-        <a href="products_english.html" class="products textMedium textDark fontProza fontBold">Products</a>
-        <a href="consultation_english.html" class="products textMedium textDark fontProza fontBold">Consultation</a>
+        <a href="products_english.html"
+            class="products textMedium textDark fontProza fontBold">Products</a>
+        <a href="consultation_english.html"
+            class="products textMedium textDark fontProza fontBold">Consultation</a>
         <a href="flower_delivery_english.html"
             class="products textMedium textDark fontProza fontBold">Send Flowers</a>
     </div>
