--- a/_templates/modules/footer.html
+++ b/_templates/modules/footer.html
@@ -69,7 +69,7 @@
         <div class="textMedium fontProza fontBold">
             Delikat Flora
         </div>
-        <a href="!!!ABOUT_US_LINK!!!">!!!ABOUT_US!!!</a>
+        <a href="about_us!!!LANGUAGE_ID!!!.html">!!!ABOUT_US!!!</a>
     </div>
     <div class="divider"></div>
     <div class="contactInfo">
