--- a/website/about_us_danish.html
+++ b/website/about_us_danish.html
@@ -46,7 +46,8 @@
             <button onclick="onDropDownButtonClick()" class="dropButton"></button>
         </label>
         <div class="dropDownMenu">
-            <a href="products_danish.html" class="products textMediumSmall textLight fontInter">Produkter</a>
+            <a href="products_danish.html"
+                class="products textMediumSmall textLight fontInter">Produkter</a>
             <a href="consultation_danish.html"
                 class="products textMediumSmall textLight fontInter">Konsultation</a>
             <a href="flower_delivery_danish.html"
@@ -55,8 +56,10 @@
     </div>
 
     <div class="allServices">
-        <a href="products_danish.html" class="products textMedium textDark fontProza fontBold">Produkter</a>
-        <a href="consultation_danish.html" class="products textMedium textDark fontProza fontBold">Konsultation</a>
+        <a href="products_danish.html"
+            class="products textMedium textDark fontProza fontBold">Produkter</a>
+        <a href="consultation_danish.html"
+            class="products textMedium textDark fontProza fontBold">Konsultation</a>
         <a href="flower_delivery_danish.html"
             class="products textMedium textDark fontProza fontBold">Send blomster</a>
     </div>
