Fix postal code test
The postal code test was modified to wait for the database to respond. To do this the flower delivery page waits for the database to respond before it displays the interface for the postal code checker.

--- a/website/flower_delivery_english.html
+++ b/website/flower_delivery_english.html
@@ -75,11 +75,9 @@
                     <div class="sendFlowersText textMediumSmall fontProza">
                         Send flower bouquets with our flower delivery service.
                     </div>
-                    <input type="text" class="postalCodeInput textSmall fontInter"
-                        placeholder="Postal code: XXX XX">
-                    <div class="postalCodeOutput textSmall fontInter">
+                    <div id="postalCodeChecker">
+
                     </div>
-                    <input type="button" class="confirmButton textSmall fontInter" value="Check postal code">
                     <div class="serviceDescription textSmall fontInter">
                         With our flower delivery service, you can easily surprise someone with beautiful flowers delivered right to their door. Choose a bouquet, write a personal message, and we’ll take care of the rest. Perfect for birthdays, holidays, or everyday joy.
                     </div>
