--- a/_templates/source_files/flower_delivery.html
+++ b/_templates/source_files/flower_delivery.html
@@ -35,11 +35,9 @@
                     <div class="sendFlowersText textMediumSmall fontProza">
                         !!!SEND_FLOWERS!!!
                     </div>
-                    <input type="text" class="postalCodeInput textSmall fontInter"
-                        placeholder="!!!POSTAL_CODE!!!: XXX XX">
-                    <div class="postalCodeOutput textSmall fontInter">
+                    <div id="postalCodeChecker">
+
                     </div>
-                    <input type="button" class="confirmButton textSmall fontInter" value="!!!CHECK_POSTAL_CODE!!!">
                     <div class="serviceDescription textSmall fontInter">
                         !!!FLOWER_DELIVERY_DESCRIPTION!!!
                     </div>
