--- a/website/flower_delivery.html
+++ b/website/flower_delivery.html
@@ -75,11 +75,9 @@
                     <div class="sendFlowersText textMediumSmall fontProza">
                         Skicka blombuketter med vår blommogramtjänst
                     </div>
-                    <input type="text" class="postalCodeInput textSmall fontInter"
-                        placeholder="Postnummer: XXX XX">
-                    <div class="postalCodeOutput textSmall fontInter">
+                    <div id="postalCodeChecker">
+
                     </div>
-                    <input type="button" class="confirmButton textSmall fontInter" value="Kolla postnummer">
                     <div class="serviceDescription textSmall fontInter">
                         Med vår blommogramtjänst kan du enkelt överraska någon med vackra blommor, levererade direkt till dörren. Välj bukett, skriv en personlig hälsning, så sköter vi resten. Perfekt för födelsedagar, högtider eller vardagsglädje.
                     </div>
