--- a/website/flower_delivery_danish.html
+++ b/website/flower_delivery_danish.html
@@ -75,11 +75,9 @@
                     <div class="sendFlowersText textMediumSmall fontProza">
                         Send blomsterbuketter med vores blomsterleveringsservice
                     </div>
-                    <input type="text" class="postalCodeInput textSmall fontInter"
-                        placeholder="Postnummer: XXX XX">
-                    <div class="postalCodeOutput textSmall fontInter">
+                    <div id="postalCodeChecker">
+
                     </div>
-                    <input type="button" class="confirmButton textSmall fontInter" value="Tjek postnummer">
                     <div class="serviceDescription textSmall fontInter">
                         Med vores blomsterleveringsservice kan du nemt overraske nogen med smukke blomster leveret direkte til døren. Vælg en buket, skriv en personlig besked, og så klarer vi resten. Perfekt til fødselsdage, højtider eller hverdagsglæder.
                     </div>
