Switch from supabase client to js fetch
fetch.js, products.js and flower_delivery.js was updated to use the javascript fucntion fetch instead of supabase client library. This was done in order to use ordinary scripts for the product page to simplify testing.

--- a/_templates/source_files/flower_delivery.html
+++ b/_templates/source_files/flower_delivery.html
@@ -60,8 +60,9 @@
         </div>
         !!!FOOTER!!!
     </main>
-    <script type="module" src="flower_delivery!!!LANGUAGE_ID!!!.js"></script>
     !!!GLOBAL_JS!!!
+    <script src="fetch.js"></script>
+    <script type="module" src="flower_delivery!!!LANGUAGE_ID!!!.js"></script>
 </body>
 
 </html>
