--- a/_templates/source_files/products.html
+++ b/_templates/source_files/products.html
@@ -53,13 +53,10 @@
         </div>
         !!!FOOTER!!!
     </main>
-    <script src="toggle_vat.js"></script>
-    <script type="module">
-        import { createProducts } from "./products!!!LANGUAGE_ID!!!.js";
-        createProducts();
-        toggleVAT();
-    </script>
     !!!GLOBAL_JS!!!
+    <script src="fetch.js"></script>
+    <script src="toggle_vat.js"></script>
+    <script src="products!!!LANGUAGE_ID!!!.js"></script>
 </body>
 
 </html>
