--- a/website/flower_delivery.html
+++ b/website/flower_delivery.html
@@ -193,9 +193,10 @@
     </div>
 </footer>
     </main>
-    <script type="module" src="flower_delivery.js"></script>
     <script src="drop_down_button.js"></script>
 <script src="config.js"></script>
+    <script src="fetch.js"></script>
+    <script type="module" src="flower_delivery.js"></script>
 </body>
 
 </html>
