--- a/website/products_danish.html
+++ b/website/products_danish.html
@@ -186,14 +186,11 @@
     </div>
 </footer>
     </main>
-    <script src="toggle_vat.js"></script>
-    <script type="module">
-        import { createProducts } from "./products_danish.js";
-        createProducts();
-        toggleVAT();
-    </script>
     <script src="drop_down_button.js"></script>
 <script src="config.js"></script>
+    <script src="fetch.js"></script>
+    <script src="toggle_vat.js"></script>
+    <script src="products_danish.js"></script>
 </body>
 
 </html>
